--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -1,9 +1,15 @@
 
-.bordered{
+.bordered {
     border: 1px lightgray solid;
     box-shadow: 5px 5px lightgray;
     border-radius: 20px;
     background-color: whitesmoke;
     padding: 20px;
     padding-top: 10px;
+}
+.my-badge{
+    background-color: cadetblue;
+    color: white;
+    padding: 3px 10px;
+    border-radius: 7px;
 }
